Reloaded fix changes